# AKSYN_AudioEngine

./: .gitignore  CMakeLists.txt  README.md  discover_devices.cpp  latency_graph.html  node_a_sender.cpp  node_b_receiver.cpp  receiver.cpp  receiver_pa.cpp  sender.cpp  sender_pa.cpp
